responsive breakpoints updated - need to fix left grid alignment

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -51,13 +51,21 @@
 .component-index-item__image {
   display: none;
 
-  @include carbon--breakpoint(md) {
+  @include carbon--breakpoint(md) {  //672  4:3
     display: flex;
     justify-content: center;
     align-items: center;
     border-right: 1px solid $ui-03;
     // TODO: replace with appropriate aspect ratio handling
-    width: 238px;
+    width: 14.875rem;
+  }
+
+  @include carbon--breakpoint(lg) { //1056  1:1
+    width: 11.25rem;
+  }
+
+  @include carbon--breakpoint(xlg) { //1312  4:3
+    width: 14.875rem;
   }
 }
 
@@ -137,7 +145,7 @@
 .component-index-item__tag--maintainer {
   display: none;
 
-  @include carbon--breakpoint(lg) {
+  @media screen and (min-width: 850px) {
     display: flex;
     @include carbon--type-style('body-short-01');
     color: $text-01;
